--- a/rover_description/package.xml
+++ b/rover_description/package.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+
 <package format="3">
+  
   <name>rover_description</name>
   <version>0.0.0</version>
-  <description>This contains rover files</description>
-  <author email="automationwith.rishikesavan@gmail.com">Rishikesavan Ramesh</author>
-  <maintainer email="automationwith.rishikesavan@gmail.com">Rishikesavan Ramesh</maintainer>
-  <maintainer email="manoj.mb.murali@gmail.com">Manoj M</maintainer>  
-  <license>BSD</license>
+  <description>rover simulation</description>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  <exec_depend>joint_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher_gui</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>rviz2</exec_depend>
-  <exec_depend>xacro</exec_depend>
+  <maintainer email="manoj.mb.murali@gmail.com">devcon</maintainer>
+  <license>UNLICENSED</license>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <depend>urdf</depend>
+
+  <depend>joint_state_publisher</depend>
+  <depend>joint_state_publisher_gui</depend>
+  <depend>robot_state_publisher</depend>
+  <depend>rviz2</depend>
+  <depend>xacro</depend>
+
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
+
 </package>
